--- a/css/the-junk-shop.webflow.css
+++ b/css/the-junk-shop.webflow.css
@@ -11,9 +11,9 @@
 }
 
 body {
-  font-family: amster;
+  font-family: Montserrat, sans-serif;
   color: #1a1b1f;
-  font-size: 24px;
+  font-size: 16px;
   line-height: 28px;
   font-weight: 400;
 }
@@ -178,24 +178,27 @@ figcaption {
 .paragraph-bigger {
   margin-bottom: 10px;
   opacity: 1;
+  font-family: amster, sans-serif;
   font-size: 20px;
   line-height: 34px;
   font-weight: 400;
+  text-shadow: 2px 2px 2px #000;
 }
 
 .paragraph-bigger.cc-bigger-light {
   opacity: 0.6;
-  font-family: Merriweather, serif;
-  color: #000;
-  font-weight: 400;
+  font-family: amster, sans-serif;
+  color: #fff;
+  font-weight: 300;
+  text-shadow: 4px 4px 2px #000;
 }
 
-.paragraph-bigger.cc-bigger-white-light {
+.paragraph-bigger.cc-bigger-whte-light {
   opacity: 0.6;
-  font-family: amster;
-  font-size: 1.5 em;
-  color: #000;
-  font-weight: 400;
+  font-family: amster, sans-serif;
+  color: #fff;
+  font-weight: 700;
+  text-shadow: 1px 1px 2px #fff, 1px 1px 6px #000;
   background-clip: border-box;
   -webkit-text-fill-color: inherit;
 }
@@ -302,12 +305,16 @@ figcaption {
 .paragraph-light {
   opacity: 0.6;
   font-family: amster, sans-serif;
+  color: #000;
 }
 
 .heading-jumbo {
-  display: block;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: auto;
+  margin-left: auto;
   padding-left: 0px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
@@ -318,12 +325,13 @@ figcaption {
   -ms-flex-align: center;
   align-items: center;
   font-family: amster, sans-serif;
-  color: rgba(0, 0, 0, 0.69);
+  color: #fff;
   font-size: 64px;
   line-height: 80px;
   font-weight: 400;
   text-align: center;
   text-transform: uppercase;
+  text-shadow: 5px 0 2px #000;
   white-space: nowrap;
 }
 
@@ -598,34 +606,46 @@ figcaption {
 .intro-header.cc-subpage {
   height: 520px;
   background-color: #000;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0.6)), to(hsla(0, 0%, 100%, 0.6))), url('../images/top_1.png'), -webkit-gradient(linear, left top, left bottom, from(#fff), to(#fff));
-  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0.6), hsla(0, 0%, 100%, 0.6)), url('../images/top_1.png'), linear-gradient(180deg, #fff, #fff);
-  background-position: 0px 0px, 50% 0%, 0px 0px;
-  background-size: auto, contain, auto;
-  background-repeat: repeat, no-repeat, repeat;
-  background-attachment: scroll, fixed, scroll;
+  background-image: url('../images/top_1.png'), -webkit-gradient(linear, left top, left bottom, from(#fff), to(#fff));
+  background-image: url('../images/top_1.png'), linear-gradient(180deg, #fff, #fff);
+  background-position: 50% 0%, 0px 0px;
+  background-size: contain, auto;
+  background-repeat: no-repeat, repeat;
+  background-attachment: fixed, scroll;
+  -webkit-filter: contrast(200%);
+  filter: contrast(200%);
   font-family: amster, sans-serif;
   color: #fff;
+  mix-blend-mode: darken;
 }
 
 .intro-header.cc-subpage.contact {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0.61)), to(hsla(0, 0%, 100%, 0.61))), url('../images/front.png');
-  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0.61), hsla(0, 0%, 100%, 0.61)), url('../images/front.png');
-  background-position: 0px 0px, 50% 50%;
-  background-size: auto, cover;
-  background-repeat: repeat, no-repeat;
-  background-attachment: scroll, scroll;
+  position: static;
+  margin-bottom: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-image: url('../images/junkshop.png'), -webkit-gradient(linear, left top, left bottom, from(transparent), to(transparent));
+  background-image: url('../images/junkshop.png'), linear-gradient(180deg, transparent, transparent);
+  background-position: 50% 50%, 0px 0px;
+  background-size: cover, auto;
+  background-attachment: fixed, scroll;
+  -webkit-filter: none;
+  filter: none;
+  mix-blend-mode: normal;
 }
 
 .intro-header.cc-subpage.uhaul {
   height: 600px;
   margin-top: 2px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0.61)), to(hsla(0, 0%, 100%, 0.61))), url('../images/flag.jpeg'), -webkit-gradient(linear, left top, left bottom, from(#fff), to(#fff));
-  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0.61), hsla(0, 0%, 100%, 0.61)), url('../images/flag.jpeg'), linear-gradient(180deg, #fff, #fff);
-  background-position: 0px 0px, 50% 50%, 0px 0px;
-  background-size: auto, auto 100vh, auto;
-  background-repeat: repeat, no-repeat, repeat;
-  background-attachment: scroll, fixed, scroll;
+  background-image: url('../images/flag.jpeg'), -webkit-gradient(linear, left top, left bottom, from(#fff), to(#fff));
+  background-image: url('../images/flag.jpeg'), linear-gradient(180deg, #fff, #fff);
+  background-position: 50% 50%, 0px 0px;
+  background-size: auto 100vh, auto;
+  background-repeat: no-repeat, repeat;
+  background-attachment: fixed, scroll;
+  -webkit-filter: none;
+  filter: none;
+  mix-blend-mode: normal;
 }
 
 .intro-content {
@@ -796,9 +816,9 @@ figcaption {
   -ms-flex-align: center;
   align-items: center;
   background-color: #1a1b1f;
-  background-image: url('../images/jumbotron.png');
+  background-image: url('../images/6b1fb593e6d96768a958603999233ab69b56a238-1.jpeg');
   background-position: 50% 100%;
-  background-size: 250vw;
+  background-size: contain;
   background-repeat: repeat-x;
 }
 
@@ -973,12 +993,24 @@ figcaption {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
+  font-family: Quicksand, sans-serif;
   font-size: 10px;
   text-decoration: none;
 }
 
 .body {
   text-decoration: none;
+}
+
+.text-block-3 {
+  font-family: amster, sans-serif;
+}
+
+.image-6 {
+  display: block;
+  width: 57px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 @media screen and (min-width: 1280px) {
@@ -1007,6 +1039,10 @@ figcaption {
 }
 
 @media screen and (min-width: 1920px) {
+  .heading-jumbo {
+    margin-top: -154px;
+  }
+
   .intro-header {
     background-repeat: no-repeat;
   }
@@ -1030,6 +1066,10 @@ figcaption {
 
   .styleguide-block {
     text-align: center;
+  }
+
+  .paragraph-bigger.cc-bigger-whte-light {
+    font-weight: 700;
   }
 
   .button {
@@ -1184,6 +1224,10 @@ figcaption {
     line-height: 28px;
   }
 
+  .paragraph-bigger.cc-bigger-whte-light {
+    font-weight: 700;
+  }
+
   .rich-text {
     width: 90%;
     max-width: 470px;
@@ -1264,8 +1308,8 @@ figcaption {
     line-height: 52px;
   }
 
-  .paragraph-bigger.cc-bigger-white-light {
-    font-family: Quicksand, sans-serif;
+  .paragraph-bigger.cc-bigger-whte-light {
+    font-family: amster, sans-serif;
     font-weight: 700;
   }
 
@@ -1275,8 +1319,17 @@ figcaption {
   }
 
   .heading-jumbo {
-    margin-top: 0px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: -202px;
     margin-bottom: 0px;
+    padding-bottom: 0px;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
     border-style: none;
     border-width: 1px;
     border-color: #a03131;
